--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -55,8 +55,7 @@
 .Assertion {
     background: var(--green-light);
     border: 0px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: 10px;
     font-size: 18px;
     font-weight: bold;
     width: 100%;
@@ -71,8 +70,7 @@
 .Reasoning {
     background: var(--green-light);
     border: 0px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: 10px;
     font-size: 14px;
     text-align: justify;
     width: 100%;
