--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -15,7 +15,7 @@
 	border-radius: 10px; 
 	display: inline-block; 
 	padding: 0px; 
-	margin: 5px auto; 
+	margin: 0px 0px; 
 	white-space: nowrap; 
 	box-sizing: border-box;
   max-width: 450px;
@@ -54,7 +54,7 @@
 .Assertion {
     background: var(--green-light);
     border: 0px;
-    margin: 10px auto;
+    margin: 10px 10px;
     font-size: 18px;
     font-weight: bold;
     width: 100%;
@@ -69,7 +69,7 @@
 .Reasoning {
     background: var(--green-light);
     border: 0px;
-    margin: 50px auto;
+    margin: 5px 10px;
     font-size: 14px;
     text-align: justify;
     width: 100%;
