--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -15,7 +15,8 @@
 	border-radius: 10px; 
 	display: inline-block; 
 	padding: 0px; 
-	margin: 0px 0px; 
+	margin: 0px 0px;
+     
 	white-space: nowrap; 
 	box-sizing: border-box;
   max-width: 450px;
@@ -54,7 +55,7 @@
 .Assertion {
     background: var(--green-light);
     border: 0px;
-    margin: 10px 10px;
+    margin: 10px 10px 0px 10px;
     font-size: 18px;
     font-weight: bold;
     width: 100%;
@@ -69,7 +70,7 @@
 .Reasoning {
     background: var(--green-light);
     border: 0px;
-    margin: 5px 10px;
+    margin: 5px 10px 0px 10px;
     font-size: 14px;
     text-align: justify;
     width: 100%;
