--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -55,7 +55,8 @@
 .Assertion {
     background: var(--green-light);
     border: 0px;
-    margin: 10px 10px 0px 10px;
+    margin-left: 10;
+    margin-right: 50;
     font-size: 18px;
     font-weight: bold;
     width: 100%;
@@ -70,7 +71,8 @@
 .Reasoning {
     background: var(--green-light);
     border: 0px;
-    margin: 5px 10px 10px 10px;
+    margin-left: 10;
+    margin-right: 50;
     font-size: 14px;
     text-align: justify;
     width: 100%;
