--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -15,7 +15,7 @@
 	border-radius: 10px; 
 	display: inline-block; 
 	padding: 0px; 
-	margin: 0px 0px;
+	margin: 10px 100px 10px 100px;
      
 	white-space: nowrap; 
 	box-sizing: border-box;
