--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -28,6 +28,7 @@
 	white-space: nowrap; 
 	box-sizing: border-box;
   max-width: 450px;
+  min-width: 150px;
   
   overflow: hidden;
   word-wrap: break-word;
