--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -180,11 +180,12 @@ body {
 }
 
 #graph {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: var(--spacing);
-  margin: var(--spacing) 0;
+  width: 400px;
+  height: 400px;
+  border: 2px solid #333;
+  position: relative;
+  background-color: #ddd;
+  overflow: hidden;
 }
 
 .project-container {
