--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -409,23 +409,22 @@ body {
 }
 
 #map {
-  width: 400px;
-  height: 400px;
-  border: 2px solid #333;
+  width: 100%;
+  height: calc(100%-50px);
+  border: 0px;
   position: relative;
   background-color: #ddd;
   overflow: hidden;
 }
 #graph {
-  width: 50px;
-  height: 50px;
-  background-color: #007BFF;
+  width: 100%;
+  height: calc(100%-50px);
+  background-color: #000000;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   cursor: grab;
-  border-radius: 10px;
 }
 #graph:active {
   cursor: grabbing;
