--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -409,8 +409,12 @@ body {
 }
 
 #map {
+  /*
   width: 100%;
   height: calc(100%-50px);
+ */
+  width: 400px;
+  height: 400px;
   border: 2px solid #333;
   position: relative;
   background-color: #ddd;
