--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -409,7 +409,7 @@ body {
 }
 
 #map {
-  height: calc(100%-50px);
+  height: 100%;
   width: 100%;
   position: relative;
   background-color: #ddd;
