--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -28,7 +28,7 @@
 	white-space: nowrap; 
 	box-sizing: border-box;
   max-width: 450px;
-  min-width: 150px;
+  min-width: 250px;
   
   overflow: hidden;
   word-wrap: break-word;
@@ -416,15 +416,11 @@ body {
   overflow: hidden;
 }
 #graph {
-  width: 50px;
-  height: 50px;
-  background-color: #007BFF;
   position: absolute;
-  top: 50%;
+  top: 10px;
   left: 50%;
   transform: translate(-50%, -50%);
   cursor: grab;
-  border-radius: 10px;
 }
 #graph:active {
   cursor: grabbing;
