--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -412,14 +412,13 @@ body {
   height: 100%;
   width: 100%;
   position: relative;
-  background-color: #ddd;
+  background-color: #fff;
   overflow: hidden;
 }
 #graph {
   position: absolute;
   top: 10px;
   left: 50%;
-  transform: translate(-50%, -50%);
   cursor: grab;
 }
 #graph:active {
