--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -419,6 +419,7 @@ body {
   position: absolute;
   top: 10px;
   left: 50%;
+  transform: translate(-50%, -50%);
   cursor: grab;
 }
 #graph:active {
