--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -412,7 +412,7 @@ body {
   height: 100%;
   width: 100%;
   position: relative;
-  background-color: #fff;
+  background-color: #ddd;
   overflow: hidden;
 }
 #graph {
