--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -27,12 +27,8 @@
      
 	white-space: nowrap; 
 	box-sizing: border-box;
-  
-  /*
   max-width: 450px;
   min-width: 250px;
-  */
-  width: 300px;
   
   overflow: hidden;
   word-wrap: break-word;
@@ -421,12 +417,8 @@ body {
 }
 #graph {
   position: absolute;
-  /*
-  top: 10px;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(0, 0);
   cursor: grab;
-  */
 }
 #graph:active {
   cursor: grabbing;
