--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -417,7 +417,7 @@ body {
 }
 #graph {
   position: absolute;
-  transform: translate(50%, 50%);
+  /*transform: translate(50%, 50%);*/
   cursor: grab;
 }
 #graph:active {
