--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -44,6 +44,7 @@ body {
   color: var(--white);
   text-decoration: none;
   font-size: 22px;
+  font-weight: bold;
   margin-left: var(--spacing);
   padding: 5px 10px;
   border-radius: var(--radius);
@@ -267,7 +268,7 @@ body {
     width: 50%;
   }
   #banner a {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
 /* Ensure any project-input fields match card style */
