--- a/src/css/style-graph.css
+++ b/src/css/style-graph.css
@@ -358,7 +358,8 @@ div.BtnDiv * {
 }
 
 .horizontal-line {
-  height: 2px; 
+  height: 3px;
+  width: calc(100%-10px);
   background-color: black;
   margin: 0; 
   padding: 0; 
@@ -366,7 +367,7 @@ div.BtnDiv * {
 }
 
 .vertical-line {
-  width: 2px;  
+  width: 3px;  
   height: 20px; 
   background-color: black;
 }
