--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -255,7 +255,7 @@ body {
   transition: border-color var(--transition), background var(--transition);
 }
 
-.project-container input[type="text"]:focus {
+input[type="text"]:focus {
   outline: none;
   border-color: var(--green);
   background: var(--white);
