fix input style project 4

--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -209,6 +209,7 @@ body {
 .project-container:hover {
   transform: translateY(-2px);
   box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+  margin: 10px;
 }
 
 .modify-button-project,
