--- a/src/css/style-general.css
+++ b/src/css/style-general.css
@@ -244,8 +244,8 @@ body {
   color: var(--white);
 }
 
-/*
-input[type="text"] {
+
+#label input[type="text"] {
   width: 25%;
   padding: calc(var(--spacing) * 0.75);
   margin-top: var(--spacing);
@@ -257,12 +257,12 @@ input[type="text"] {
   transition: border-color var(--transition), background var(--transition);
 }
 
-input[type="text"]:focus {
+#label input[type="text"]:focus {
   outline: none;
   border-color: var(--green);
   background: var(--white);
 }
-*/
+
 @media (max-width: 480px) {
   .project-container {
     width: 50%;
